--- a/docker/couchbase-connector/Dockerfile
+++ b/docker/couchbase-connector/Dockerfile
@@ -2,8 +2,10 @@ FROM confluentinc/cp-kafka-connect:5.3.1
 
 # These files are created by "setup-kafka.sh"
 
-COPY tmp/kafka-connect-couchbase.jar \
+COPY tmp/kafka-connect-rest \
      /usr/share/java/kafka-connect-couchbase/kafka-connect-couchbase.jar
 
 COPY tmp/custom-extensions.jar \
      /usr/share/java/kafka-connect-couchbase/custom-extensions.jar
+
+
