--- a/config/source-2-raw-json.properties
+++ b/config/source-2-raw-json.properties
@@ -1,5 +1,5 @@
-# Publishes documents from the "travel-sample" bucket to the "connect-demo" topic.
-# Messages are identical to the Couchbase documents.
+# Publishes documents from the supplied "url" bucket to the "surveys" topic.
+# Messages are identical to the payload of the url (in json format,xml or similar formats).
 
 #name=cb-source
 connector.class=com.tm.kafka.connect.rest.RestSourceConnector
